# FourierLab

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: sample_signal.csv
examples/: README.md
fourierlab/: __init__.py  __main__.py  cli.py  dft.py  errors.py  fft.py  filters.py  math_utils.py  series.py  signals.py  visualize.py
tests/: test_accuracy_validation.py  test_cli.py  test_deep_fourier_theorems.py  test_dft.py  test_fft.py  test_filters.py  test_series.py  test_signals.py
